fix scrollbar

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -78,7 +78,7 @@ textarea {
   margin-left: -2em;
   margin-right: -1em;
   height: 100%;
-  overflow-y: scroll;
+  //overflow-y: scroll;
 }
 
 .edit_topic {
